cbitbake/parser/bitbake.output
Nonterminals useless in grammar

   conf_expr
   quote


Terminals unused in grammar

   SINGLE_QUOTE
   DOUBLE_QUOTE


Rules useless in grammar

   42 conf_expr: STRING
   43          | STRING conf_expr


Grammar

    0 $accept: recipe $end

    1 recipe: statements

    2 statements: statement EOL
    3           | statement EOL statements

    4 statement: block_stmt
    5          | conf_stmt
    6          | kw_stmt

    7 block_stmt: SHELL_BLOCK block_expr BLOCK_END
    8           | PYTHON_BLOCK block_expr BLOCK_END
    9           | WORD '(' ')' '{' block_expr BLOCK_END
   10           | PYTHON WORD '(' ')' '{' block_expr BLOCK_END

   11 block_expr: block_term
   12           | block_term block_expr

   13 block_term: EOL
   14           | '('
   15           | ')'
   16           | '{'
   17           | '}'
   18           | '['
   19           | ']'
   20           | STRING
   21           | WORD
   22           | BLOCK_CONTENT

   23 conf_stmt: WORD assign_op STRING
   24          | EXPORT WORD assign_op STRING
   25          | WORD '[' WORD ']' assign_op STRING
   26          | EXPORT WORD '[' WORD ']' assign_op STRING

   27 assign_op: PREDOT_ASSIGN
   28          | POSTDOT_ASSIGN
   29          | PREPEND_ASSIGN
   30          | APPEND_ASSIGN
   31          | COLON_ASSIGN
   32          | QUES_ASSIGN
   33          | LAZYQUES_ASSIGN
   34          | ASSIGN

   35 kw_stmt: kw_keyword kw_expr

   36 kw_keyword: INCLUDE
   37           | INHERIT
   38           | REQUIRE

   39 kw_expr: WORD
   40        | WORD kw_expr
   41        | WORD STRING_CONTINUATION kw_expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9 10 14
')' (41) 9 10 15
'[' (91) 18 25 26
']' (93) 19 25 26
'{' (123) 9 10 16
'}' (125) 17
error (256)
SINGLE_QUOTE (258)
DOUBLE_QUOTE (259)
INCLUDE (260) 36
INHERIT (261) 37
REQUIRE (262) 38
WORD (263) 9 10 21 23 24 25 26 39 40 41
STRING (264) 20 23 24 25 26
PYTHON_BLOCK (265) 8
SHELL_BLOCK (266) 7
BLOCK_CONTENT (267) 22
EXPORT (268) 24 26
PYTHON (269) 10
PREDOT_ASSIGN (270) 27
POSTDOT_ASSIGN (271) 28
PREPEND_ASSIGN (272) 29
APPEND_ASSIGN (273) 30
COLON_ASSIGN (274) 31
QUES_ASSIGN (275) 32
LAZYQUES_ASSIGN (276) 33
ASSIGN (277) 34
EOL (278) 2 3 13
STRING_CONTINUATION (279) 41
BLOCK_END (280) 7 8 9 10


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
recipe (33)
    on left: 1, on right: 0
statements (34)
    on left: 2 3, on right: 1 3
statement (35)
    on left: 4 5 6, on right: 2 3
block_stmt (36)
    on left: 7 8 9 10, on right: 4
block_expr (37)
    on left: 11 12, on right: 7 8 9 10 12
block_term (38)
    on left: 13 14 15 16 17 18 19 20 21 22, on right: 11 12
conf_stmt (39)
    on left: 23 24 25 26, on right: 5
assign_op (40)
    on left: 27 28 29 30 31 32 33 34, on right: 23 24 25 26
kw_stmt (41)
    on left: 35, on right: 6
kw_keyword (42)
    on left: 36 37 38, on right: 35
kw_expr (43)
    on left: 39 40 41, on right: 35 40 41


State 0

    0 $accept: . recipe $end

    INCLUDE       shift, and go to state 1
    INHERIT       shift, and go to state 2
    REQUIRE       shift, and go to state 3
    WORD          shift, and go to state 4
    PYTHON_BLOCK  shift, and go to state 5
    SHELL_BLOCK   shift, and go to state 6
    EXPORT        shift, and go to state 7
    PYTHON        shift, and go to state 8

    recipe      go to state 9
    statements  go to state 10
    statement   go to state 11
    block_stmt  go to state 12
    conf_stmt   go to state 13
    kw_stmt     go to state 14
    kw_keyword  go to state 15


State 1

   36 kw_keyword: INCLUDE .

    $default  reduce using rule 36 (kw_keyword)


State 2

   37 kw_keyword: INHERIT .

    $default  reduce using rule 37 (kw_keyword)


State 3

   38 kw_keyword: REQUIRE .

    $default  reduce using rule 38 (kw_keyword)


State 4

    9 block_stmt: WORD . '(' ')' '{' block_expr BLOCK_END
   23 conf_stmt: WORD . assign_op STRING
   25          | WORD . '[' WORD ']' assign_op STRING

    PREDOT_ASSIGN    shift, and go to state 16
    POSTDOT_ASSIGN   shift, and go to state 17
    PREPEND_ASSIGN   shift, and go to state 18
    APPEND_ASSIGN    shift, and go to state 19
    COLON_ASSIGN     shift, and go to state 20
    QUES_ASSIGN      shift, and go to state 21
    LAZYQUES_ASSIGN  shift, and go to state 22
    ASSIGN           shift, and go to state 23
    '('              shift, and go to state 24
    '['              shift, and go to state 25

    assign_op  go to state 26


State 5

    8 block_stmt: PYTHON_BLOCK . block_expr BLOCK_END

    WORD           shift, and go to state 27
    STRING         shift, and go to state 28
    BLOCK_CONTENT  shift, and go to state 29
    EOL            shift, and go to state 30
    '('            shift, and go to state 31
    ')'            shift, and go to state 32
    '{'            shift, and go to state 33
    '}'            shift, and go to state 34
    '['            shift, and go to state 35
    ']'            shift, and go to state 36

    block_expr  go to state 37
    block_term  go to state 38


State 6

    7 block_stmt: SHELL_BLOCK . block_expr BLOCK_END

    WORD           shift, and go to state 27
    STRING         shift, and go to state 28
    BLOCK_CONTENT  shift, and go to state 29
    EOL            shift, and go to state 30
    '('            shift, and go to state 31
    ')'            shift, and go to state 32
    '{'            shift, and go to state 33
    '}'            shift, and go to state 34
    '['            shift, and go to state 35
    ']'            shift, and go to state 36

    block_expr  go to state 39
    block_term  go to state 38


State 7

   24 conf_stmt: EXPORT . WORD assign_op STRING
   26          | EXPORT . WORD '[' WORD ']' assign_op STRING

    WORD  shift, and go to state 40


State 8

   10 block_stmt: PYTHON . WORD '(' ')' '{' block_expr BLOCK_END

    WORD  shift, and go to state 41


State 9

    0 $accept: recipe . $end

    $end  shift, and go to state 42


State 10

    1 recipe: statements .

    $default  reduce using rule 1 (recipe)


State 11

    2 statements: statement . EOL
    3           | statement . EOL statements

    EOL  shift, and go to state 43


State 12

    4 statement: block_stmt .

    $default  reduce using rule 4 (statement)


State 13

    5 statement: conf_stmt .

    $default  reduce using rule 5 (statement)


State 14

    6 statement: kw_stmt .

    $default  reduce using rule 6 (statement)


State 15

   35 kw_stmt: kw_keyword . kw_expr

    WORD  shift, and go to state 44

    kw_expr  go to state 45


State 16

   27 assign_op: PREDOT_ASSIGN .

    $default  reduce using rule 27 (assign_op)


State 17

   28 assign_op: POSTDOT_ASSIGN .

    $default  reduce using rule 28 (assign_op)


State 18

   29 assign_op: PREPEND_ASSIGN .

    $default  reduce using rule 29 (assign_op)


State 19

   30 assign_op: APPEND_ASSIGN .

    $default  reduce using rule 30 (assign_op)


State 20

   31 assign_op: COLON_ASSIGN .

    $default  reduce using rule 31 (assign_op)


State 21

   32 assign_op: QUES_ASSIGN .

    $default  reduce using rule 32 (assign_op)


State 22

   33 assign_op: LAZYQUES_ASSIGN .

    $default  reduce using rule 33 (assign_op)


State 23

   34 assign_op: ASSIGN .

    $default  reduce using rule 34 (assign_op)


State 24

    9 block_stmt: WORD '(' . ')' '{' block_expr BLOCK_END

    ')'  shift, and go to state 46


State 25

   25 conf_stmt: WORD '[' . WORD ']' assign_op STRING

    WORD  shift, and go to state 47


State 26

   23 conf_stmt: WORD assign_op . STRING

    STRING  shift, and go to state 48


State 27

   21 block_term: WORD .

    $default  reduce using rule 21 (block_term)


State 28

   20 block_term: STRING .

    $default  reduce using rule 20 (block_term)


State 29

   22 block_term: BLOCK_CONTENT .

    $default  reduce using rule 22 (block_term)


State 30

   13 block_term: EOL .

    $default  reduce using rule 13 (block_term)


State 31

   14 block_term: '(' .

    $default  reduce using rule 14 (block_term)


State 32

   15 block_term: ')' .

    $default  reduce using rule 15 (block_term)


State 33

   16 block_term: '{' .

    $default  reduce using rule 16 (block_term)


State 34

   17 block_term: '}' .

    $default  reduce using rule 17 (block_term)


State 35

   18 block_term: '[' .

    $default  reduce using rule 18 (block_term)


State 36

   19 block_term: ']' .

    $default  reduce using rule 19 (block_term)


State 37

    8 block_stmt: PYTHON_BLOCK block_expr . BLOCK_END

    BLOCK_END  shift, and go to state 49


State 38

   11 block_expr: block_term .
   12           | block_term . block_expr

    WORD           shift, and go to state 27
    STRING         shift, and go to state 28
    BLOCK_CONTENT  shift, and go to state 29
    EOL            shift, and go to state 30
    '('            shift, and go to state 31
    ')'            shift, and go to state 32
    '{'            shift, and go to state 33
    '}'            shift, and go to state 34
    '['            shift, and go to state 35
    ']'            shift, and go to state 36

    $default  reduce using rule 11 (block_expr)

    block_expr  go to state 50
    block_term  go to state 38


State 39

    7 block_stmt: SHELL_BLOCK block_expr . BLOCK_END

    BLOCK_END  shift, and go to state 51


State 40

   24 conf_stmt: EXPORT WORD . assign_op STRING
   26          | EXPORT WORD . '[' WORD ']' assign_op STRING

    PREDOT_ASSIGN    shift, and go to state 16
    POSTDOT_ASSIGN   shift, and go to state 17
    PREPEND_ASSIGN   shift, and go to state 18
    APPEND_ASSIGN    shift, and go to state 19
    COLON_ASSIGN     shift, and go to state 20
    QUES_ASSIGN      shift, and go to state 21
    LAZYQUES_ASSIGN  shift, and go to state 22
    ASSIGN           shift, and go to state 23
    '['              shift, and go to state 52

    assign_op  go to state 53


State 41

   10 block_stmt: PYTHON WORD . '(' ')' '{' block_expr BLOCK_END

    '('  shift, and go to state 54


State 42

    0 $accept: recipe $end .

    $default  accept


State 43

    2 statements: statement EOL .
    3           | statement EOL . statements

    INCLUDE       shift, and go to state 1
    INHERIT       shift, and go to state 2
    REQUIRE       shift, and go to state 3
    WORD          shift, and go to state 4
    PYTHON_BLOCK  shift, and go to state 5
    SHELL_BLOCK   shift, and go to state 6
    EXPORT        shift, and go to state 7
    PYTHON        shift, and go to state 8

    $default  reduce using rule 2 (statements)

    statements  go to state 55
    statement   go to state 11
    block_stmt  go to state 12
    conf_stmt   go to state 13
    kw_stmt     go to state 14
    kw_keyword  go to state 15


State 44

   39 kw_expr: WORD .
   40        | WORD . kw_expr
   41        | WORD . STRING_CONTINUATION kw_expr

    WORD                 shift, and go to state 44
    STRING_CONTINUATION  shift, and go to state 56

    $default  reduce using rule 39 (kw_expr)

    kw_expr  go to state 57


State 45

   35 kw_stmt: kw_keyword kw_expr .

    $default  reduce using rule 35 (kw_stmt)


State 46

    9 block_stmt: WORD '(' ')' . '{' block_expr BLOCK_END

    '{'  shift, and go to state 58


State 47

   25 conf_stmt: WORD '[' WORD . ']' assign_op STRING

    ']'  shift, and go to state 59


State 48

   23 conf_stmt: WORD assign_op STRING .

    $default  reduce using rule 23 (conf_stmt)


State 49

    8 block_stmt: PYTHON_BLOCK block_expr BLOCK_END .

    $default  reduce using rule 8 (block_stmt)


State 50

   12 block_expr: block_term block_expr .

    $default  reduce using rule 12 (block_expr)


State 51

    7 block_stmt: SHELL_BLOCK block_expr BLOCK_END .

    $default  reduce using rule 7 (block_stmt)


State 52

   26 conf_stmt: EXPORT WORD '[' . WORD ']' assign_op STRING

    WORD  shift, and go to state 60


State 53

   24 conf_stmt: EXPORT WORD assign_op . STRING

    STRING  shift, and go to state 61


State 54

   10 block_stmt: PYTHON WORD '(' . ')' '{' block_expr BLOCK_END

    ')'  shift, and go to state 62


State 55

    3 statements: statement EOL statements .

    $default  reduce using rule 3 (statements)


State 56

   41 kw_expr: WORD STRING_CONTINUATION . kw_expr

    WORD  shift, and go to state 44

    kw_expr  go to state 63


State 57

   40 kw_expr: WORD kw_expr .

    $default  reduce using rule 40 (kw_expr)


State 58

    9 block_stmt: WORD '(' ')' '{' . block_expr BLOCK_END

    WORD           shift, and go to state 27
    STRING         shift, and go to state 28
    BLOCK_CONTENT  shift, and go to state 29
    EOL            shift, and go to state 30
    '('            shift, and go to state 31
    ')'            shift, and go to state 32
    '{'            shift, and go to state 33
    '}'            shift, and go to state 34
    '['            shift, and go to state 35
    ']'            shift, and go to state 36

    block_expr  go to state 64
    block_term  go to state 38


State 59

   25 conf_stmt: WORD '[' WORD ']' . assign_op STRING

    PREDOT_ASSIGN    shift, and go to state 16
    POSTDOT_ASSIGN   shift, and go to state 17
    PREPEND_ASSIGN   shift, and go to state 18
    APPEND_ASSIGN    shift, and go to state 19
    COLON_ASSIGN     shift, and go to state 20
    QUES_ASSIGN      shift, and go to state 21
    LAZYQUES_ASSIGN  shift, and go to state 22
    ASSIGN           shift, and go to state 23

    assign_op  go to state 65


State 60

   26 conf_stmt: EXPORT WORD '[' WORD . ']' assign_op STRING

    ']'  shift, and go to state 66


State 61

   24 conf_stmt: EXPORT WORD assign_op STRING .

    $default  reduce using rule 24 (conf_stmt)


State 62

   10 block_stmt: PYTHON WORD '(' ')' . '{' block_expr BLOCK_END

    '{'  shift, and go to state 67


State 63

   41 kw_expr: WORD STRING_CONTINUATION kw_expr .

    $default  reduce using rule 41 (kw_expr)


State 64

    9 block_stmt: WORD '(' ')' '{' block_expr . BLOCK_END

    BLOCK_END  shift, and go to state 68


State 65

   25 conf_stmt: WORD '[' WORD ']' assign_op . STRING

    STRING  shift, and go to state 69


State 66

   26 conf_stmt: EXPORT WORD '[' WORD ']' . assign_op STRING

    PREDOT_ASSIGN    shift, and go to state 16
    POSTDOT_ASSIGN   shift, and go to state 17
    PREPEND_ASSIGN   shift, and go to state 18
    APPEND_ASSIGN    shift, and go to state 19
    COLON_ASSIGN     shift, and go to state 20
    QUES_ASSIGN      shift, and go to state 21
    LAZYQUES_ASSIGN  shift, and go to state 22
    ASSIGN           shift, and go to state 23

    assign_op  go to state 70


State 67

   10 block_stmt: PYTHON WORD '(' ')' '{' . block_expr BLOCK_END

    WORD           shift, and go to state 27
    STRING         shift, and go to state 28
    BLOCK_CONTENT  shift, and go to state 29
    EOL            shift, and go to state 30
    '('            shift, and go to state 31
    ')'            shift, and go to state 32
    '{'            shift, and go to state 33
    '}'            shift, and go to state 34
    '['            shift, and go to state 35
    ']'            shift, and go to state 36

    block_expr  go to state 71
    block_term  go to state 38


State 68

    9 block_stmt: WORD '(' ')' '{' block_expr BLOCK_END .

    $default  reduce using rule 9 (block_stmt)


State 69

   25 conf_stmt: WORD '[' WORD ']' assign_op STRING .

    $default  reduce using rule 25 (conf_stmt)


State 70

   26 conf_stmt: EXPORT WORD '[' WORD ']' assign_op . STRING

    STRING  shift, and go to state 72


State 71

   10 block_stmt: PYTHON WORD '(' ')' '{' block_expr . BLOCK_END

    BLOCK_END  shift, and go to state 73


State 72

   26 conf_stmt: EXPORT WORD '[' WORD ']' assign_op STRING .

    $default  reduce using rule 26 (conf_stmt)


State 73

   10 block_stmt: PYTHON WORD '(' ')' '{' block_expr BLOCK_END .

    $default  reduce using rule 10 (block_stmt)
